--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-social-icons": "^5.15.0",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
