change home page

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://huynguyen0195.github.io",
+  "homepage": "https://huynguyen.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
